@@ -17,6 +17,7 @@
   <property name="type_hint">GDK_WINDOW_TYPE_HINT_NORMAL</property>
   <property name="gravity">GDK_GRAVITY_NORTH_WEST</property>
   <property name="focus_on_map">True</property>
+  <property name="urgency_hint">False</property>
 
   <child>
     <widget class="GtkVBox" id="vbox8">
@@ -2919,6 +2920,7 @@
 				      <property name="has_frame">True</property>
 				      <property name="invisible_char">*</property>
 				      <property name="activates_default">False</property>
+				      <signal name="changed" handler="on_entry_http_proxy_changed" last_modification_time="Fri, 31 Mar 2006 11:57:42 GMT"/>
 				    </widget>
 				    <packing>
 				      <property name="padding">0</property>
