@@ -5,6 +5,7 @@ synaptic (0.57.9) unstable; urgency=low
     seb128 and glatzor)
   * if no terminal activity is detected and the terminal is expanded
     set the urgency hint as well (ubuntu: #31436)
+  * remove http:// when it was entered as part of the proxy uri
 
  -- 
 
